Post-v3.3.0
--------------------
   - Option '--mlockall' now only locks memory pages on fault, if possible.
     This also makes it compatible with vHost Post-copy Live Migration.
   - Userspace datapath:
     * Conntrack now supports 'random' flag for selecting ports in a range
       while natting and 'persistent' flag for selection of the IP address
       from a range.
   - The primary development branch has been renamed from 'master' to 'main'.
     The OVS tree remains hosted on GitHub.
     https://github.com/openvswitch/ovs.git
   - DPDK:
     * OVS validated with DPDK 23.11.1.
     * Link status changes are now handled via interrupt mode if the DPDK
       driver supports it.  It is possible to revert to polling mode by setting
       per interface 'options:dpdk-lsc-interrupt' to 'false'.
   - Python:
     * Added custom transaction support to the Idl via add_op().


v3.3.0 - 16 Feb 2024
--------------------
   - OVSDB:
     * Support pre-vote mechanism in RAFT that protects the cluster against
       disruptive servers (section 9.6 of the original RAFT paper).  Upgrading
       from older version is supported but it may trigger more leader elections
       during the process, and error logs complaining unrecognized fields may
       be observed on old nodes.
     * New command line option --config-file that allows a fine control over
       remotes and database configuration, including setting options for
       connection methods for relays and active-backup replication.
       For more details see ovsdb-server(1) and ovsdb(7).
     * Make use of cooperative multitasking to improve maintenance of RAFT
       cluster during long running processing such as online schema conversion.
   - OpenFlow:
     * NXT_CT_FLUSH extension is updated to support flushing connections
       based on mark and labels.  'ct-flush' command of ovs-ofctl updated
       to support these new arguments accordingly.
   - ovs-appctl: